examples/test/testpolicy295.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy295
  namespace: namespace364
spec:
  podSelector:
    matchLabels:
      key9: value20
      key45: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value24
      podSelector:
        matchLabels:
          key11: value38
          key15: value25
